lab03/src/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     empty -> <empty>
Rule 3     instructions_opt -> instructions
Rule 4     instructions_opt -> empty
Rule 5     instructions -> instructions instruction
Rule 6     instructions -> instruction
Rule 7     instruction -> assignment
Rule 8     instruction -> conditional_statement
Rule 9     instruction -> print_statement
Rule 10    instruction -> jump_statement
Rule 11    instruction -> return_statement
Rule 12    instruction -> while_loop
Rule 13    instruction -> for_loop
Rule 14    instruction -> instruction_block
Rule 15    instruction_block -> { instructions }
Rule 16    assignment -> assign_id = expression ;
Rule 17    assignment -> assign_id MUL_ASSIGN expression ;
Rule 18    assignment -> assign_id DIV_ASSIGN expression ;
Rule 19    assignment -> assign_id PLUS_ASSIGN expression ;
Rule 20    assignment -> assign_id SUB_ASSIGN expression ;
Rule 21    assign_id -> ID
Rule 22    assign_id -> ID vector
Rule 23    expression -> expression_binop
Rule 24    expression -> expression_relop
Rule 25    expression -> expression_unary
Rule 26    expression -> matrix_funcs
Rule 27    expression -> constant
Rule 28    expression -> matrix
Rule 29    expression -> ID
Rule 30    expression -> ( expression )
Rule 31    expression_binop -> expression + expression
Rule 32    expression_binop -> expression - expression
Rule 33    expression_binop -> expression * expression
Rule 34    expression_binop -> expression / expression
Rule 35    expression_binop -> expression MATRIX_PLUS expression
Rule 36    expression_binop -> expression MATRIX_SUB expression
Rule 37    expression_binop -> expression MATRIX_MUL expression
Rule 38    expression_binop -> expression MATRIX_DIV expression
Rule 39    expression_relop -> expression RELOP_EQ expression
Rule 40    expression_relop -> expression RELOP_GT expression
Rule 41    expression_relop -> expression RELOP_LT expression
Rule 42    expression_relop -> expression RELOP_GE expression
Rule 43    expression_relop -> expression RELOP_LE expression
Rule 44    expression_relop -> expression RELOP_NE expression
Rule 45    expression_unary -> - expression
Rule 46    expression_unary -> expression '
Rule 47    matrix_funcs -> ZEROS ( expression_list )
Rule 48    matrix_funcs -> ONES ( expression_list )
Rule 49    matrix_funcs -> EYE ( expression_list )
Rule 50    constant -> DT_STRING
Rule 51    constant -> number
Rule 52    matrix -> [ vectors ]
Rule 53    vectors -> vector
Rule 54    vectors -> vectors , vector
Rule 55    vector -> [ numbers ]
Rule 56    vector -> [ ]
Rule 57    numbers -> numbers , number
Rule 58    numbers -> number
Rule 59    number -> DT_INTEGER
Rule 60    number -> DT_FLOAT
Rule 61    conditional_statement -> IF ( expression ) instruction
Rule 62    conditional_statement -> IF ( expression ) instruction ELSE instruction
Rule 63    jump_statement -> BREAK ;
Rule 64    jump_statement -> CONTINUE ;
Rule 65    return_statement -> RETURN ;
Rule 66    return_statement -> RETURN expression ;
Rule 67    print_statement -> PRINT expression_list ;
Rule 68    expression_list -> expression_list , expression
Rule 69    expression_list -> expression
Rule 70    while_loop -> WHILE ( expression ) instruction
Rule 71    for_loop -> FOR ID = range_value : range_value instruction
Rule 72    range_value -> DT_INTEGER
Rule 73    range_value -> ID

Terminals, with rules where they appear

'                    : 46
(                    : 30 47 48 49 61 62 70
)                    : 30 47 48 49 61 62 70
*                    : 33
+                    : 31
,                    : 54 57 68
-                    : 32 45
/                    : 34
:                    : 71
;                    : 16 17 18 19 20 63 64 65 66 67
=                    : 16 71
BREAK                : 63
CONTINUE             : 64
DIV_ASSIGN           : 18
DT_FLOAT             : 60
DT_INTEGER           : 59 72
DT_STRING            : 50
ELSE                 : 62
EYE                  : 49
FOR                  : 71
ID                   : 21 22 29 71 73
IF                   : 61 62
MATRIX_DIV           : 38
MATRIX_MUL           : 37
MATRIX_PLUS          : 35
MATRIX_SUB           : 36
MUL_ASSIGN           : 17
ONES                 : 48
PLUS_ASSIGN          : 19
PRINT                : 67
RELOP_EQ             : 39
RELOP_GE             : 42
RELOP_GT             : 40
RELOP_LE             : 43
RELOP_LT             : 41
RELOP_NE             : 44
RETURN               : 65 66
SUB_ASSIGN           : 20
WHILE                : 70
ZEROS                : 47
[                    : 52 55 56
]                    : 52 55 56
error                : 
{                    : 15
}                    : 15

Nonterminals, with rules where they appear

assign_id            : 16 17 18 19 20
assignment           : 7
conditional_statement : 8
constant             : 27
empty                : 4
expression           : 16 17 18 19 20 30 31 31 32 32 33 33 34 34 35 35 36 36 37 37 38 38 39 39 40 40 41 41 42 42 43 43 44 44 45 46 61 62 66 68 69 70
expression_binop     : 23
expression_list      : 47 48 49 67 68
expression_relop     : 24
expression_unary     : 25
for_loop             : 13
instruction          : 5 6 61 62 62 70 71
instruction_block    : 14
instructions         : 3 5 15
instructions_opt     : 1
jump_statement       : 10
matrix               : 28
matrix_funcs         : 26
number               : 51 57 58
numbers              : 55 57
print_statement      : 9
program              : 0
range_value          : 71 71
return_statement     : 11
vector               : 22 53 54
vectors              : 52 54
while_loop           : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (3) instructions_opt -> . instructions
    (4) instructions_opt -> . empty
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (2) empty -> .
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (61) conditional_statement -> . IF ( expression ) instruction
    (62) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (67) print_statement -> . PRINT expression_list ;
    (63) jump_statement -> . BREAK ;
    (64) jump_statement -> . CONTINUE ;
    (65) return_statement -> . RETURN ;
    (66) return_statement -> . RETURN expression ;
    (70) while_loop -> . WHILE ( expression ) instruction
    (71) for_loop -> . FOR ID = range_value : range_value instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . ID vector

    $end            reduce using rule 2 (empty -> .)
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    empty                          shift and go to state 4
    instruction                    shift and go to state 5
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (3) instructions_opt -> instructions .
    (5) instructions -> instructions . instruction
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (61) conditional_statement -> . IF ( expression ) instruction
    (62) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (67) print_statement -> . PRINT expression_list ;
    (63) jump_statement -> . BREAK ;
    (64) jump_statement -> . CONTINUE ;
    (65) return_statement -> . RETURN ;
    (66) return_statement -> . RETURN expression ;
    (70) while_loop -> . WHILE ( expression ) instruction
    (71) for_loop -> . FOR ID = range_value : range_value instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . ID vector

    $end            reduce using rule 3 (instructions_opt -> instructions .)
    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    instruction                    shift and go to state 24
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14

state 4

    (4) instructions_opt -> empty .

    $end            reduce using rule 4 (instructions_opt -> empty .)


state 5

    (6) instructions -> instruction .

    IF              reduce using rule 6 (instructions -> instruction .)
    PRINT           reduce using rule 6 (instructions -> instruction .)
    BREAK           reduce using rule 6 (instructions -> instruction .)
    CONTINUE        reduce using rule 6 (instructions -> instruction .)
    RETURN          reduce using rule 6 (instructions -> instruction .)
    WHILE           reduce using rule 6 (instructions -> instruction .)
    FOR             reduce using rule 6 (instructions -> instruction .)
    {               reduce using rule 6 (instructions -> instruction .)
    ID              reduce using rule 6 (instructions -> instruction .)
    $end            reduce using rule 6 (instructions -> instruction .)
    }               reduce using rule 6 (instructions -> instruction .)


state 6

    (7) instruction -> assignment .

    IF              reduce using rule 7 (instruction -> assignment .)
    PRINT           reduce using rule 7 (instruction -> assignment .)
    BREAK           reduce using rule 7 (instruction -> assignment .)
    CONTINUE        reduce using rule 7 (instruction -> assignment .)
    RETURN          reduce using rule 7 (instruction -> assignment .)
    WHILE           reduce using rule 7 (instruction -> assignment .)
    FOR             reduce using rule 7 (instruction -> assignment .)
    {               reduce using rule 7 (instruction -> assignment .)
    ID              reduce using rule 7 (instruction -> assignment .)
    $end            reduce using rule 7 (instruction -> assignment .)
    }               reduce using rule 7 (instruction -> assignment .)
    ELSE            reduce using rule 7 (instruction -> assignment .)


state 7

    (8) instruction -> conditional_statement .

    IF              reduce using rule 8 (instruction -> conditional_statement .)
    PRINT           reduce using rule 8 (instruction -> conditional_statement .)
    BREAK           reduce using rule 8 (instruction -> conditional_statement .)
    CONTINUE        reduce using rule 8 (instruction -> conditional_statement .)
    RETURN          reduce using rule 8 (instruction -> conditional_statement .)
    WHILE           reduce using rule 8 (instruction -> conditional_statement .)
    FOR             reduce using rule 8 (instruction -> conditional_statement .)
    {               reduce using rule 8 (instruction -> conditional_statement .)
    ID              reduce using rule 8 (instruction -> conditional_statement .)
    $end            reduce using rule 8 (instruction -> conditional_statement .)
    }               reduce using rule 8 (instruction -> conditional_statement .)
    ELSE            reduce using rule 8 (instruction -> conditional_statement .)


state 8

    (9) instruction -> print_statement .

    IF              reduce using rule 9 (instruction -> print_statement .)
    PRINT           reduce using rule 9 (instruction -> print_statement .)
    BREAK           reduce using rule 9 (instruction -> print_statement .)
    CONTINUE        reduce using rule 9 (instruction -> print_statement .)
    RETURN          reduce using rule 9 (instruction -> print_statement .)
    WHILE           reduce using rule 9 (instruction -> print_statement .)
    FOR             reduce using rule 9 (instruction -> print_statement .)
    {               reduce using rule 9 (instruction -> print_statement .)
    ID              reduce using rule 9 (instruction -> print_statement .)
    $end            reduce using rule 9 (instruction -> print_statement .)
    }               reduce using rule 9 (instruction -> print_statement .)
    ELSE            reduce using rule 9 (instruction -> print_statement .)


state 9

    (10) instruction -> jump_statement .

    IF              reduce using rule 10 (instruction -> jump_statement .)
    PRINT           reduce using rule 10 (instruction -> jump_statement .)
    BREAK           reduce using rule 10 (instruction -> jump_statement .)
    CONTINUE        reduce using rule 10 (instruction -> jump_statement .)
    RETURN          reduce using rule 10 (instruction -> jump_statement .)
    WHILE           reduce using rule 10 (instruction -> jump_statement .)
    FOR             reduce using rule 10 (instruction -> jump_statement .)
    {               reduce using rule 10 (instruction -> jump_statement .)
    ID              reduce using rule 10 (instruction -> jump_statement .)
    $end            reduce using rule 10 (instruction -> jump_statement .)
    }               reduce using rule 10 (instruction -> jump_statement .)
    ELSE            reduce using rule 10 (instruction -> jump_statement .)


state 10

    (11) instruction -> return_statement .

    IF              reduce using rule 11 (instruction -> return_statement .)
    PRINT           reduce using rule 11 (instruction -> return_statement .)
    BREAK           reduce using rule 11 (instruction -> return_statement .)
    CONTINUE        reduce using rule 11 (instruction -> return_statement .)
    RETURN          reduce using rule 11 (instruction -> return_statement .)
    WHILE           reduce using rule 11 (instruction -> return_statement .)
    FOR             reduce using rule 11 (instruction -> return_statement .)
    {               reduce using rule 11 (instruction -> return_statement .)
    ID              reduce using rule 11 (instruction -> return_statement .)
    $end            reduce using rule 11 (instruction -> return_statement .)
    }               reduce using rule 11 (instruction -> return_statement .)
    ELSE            reduce using rule 11 (instruction -> return_statement .)


state 11

    (12) instruction -> while_loop .

    IF              reduce using rule 12 (instruction -> while_loop .)
    PRINT           reduce using rule 12 (instruction -> while_loop .)
    BREAK           reduce using rule 12 (instruction -> while_loop .)
    CONTINUE        reduce using rule 12 (instruction -> while_loop .)
    RETURN          reduce using rule 12 (instruction -> while_loop .)
    WHILE           reduce using rule 12 (instruction -> while_loop .)
    FOR             reduce using rule 12 (instruction -> while_loop .)
    {               reduce using rule 12 (instruction -> while_loop .)
    ID              reduce using rule 12 (instruction -> while_loop .)
    $end            reduce using rule 12 (instruction -> while_loop .)
    }               reduce using rule 12 (instruction -> while_loop .)
    ELSE            reduce using rule 12 (instruction -> while_loop .)


state 12

    (13) instruction -> for_loop .

    IF              reduce using rule 13 (instruction -> for_loop .)
    PRINT           reduce using rule 13 (instruction -> for_loop .)
    BREAK           reduce using rule 13 (instruction -> for_loop .)
    CONTINUE        reduce using rule 13 (instruction -> for_loop .)
    RETURN          reduce using rule 13 (instruction -> for_loop .)
    WHILE           reduce using rule 13 (instruction -> for_loop .)
    FOR             reduce using rule 13 (instruction -> for_loop .)
    {               reduce using rule 13 (instruction -> for_loop .)
    ID              reduce using rule 13 (instruction -> for_loop .)
    $end            reduce using rule 13 (instruction -> for_loop .)
    }               reduce using rule 13 (instruction -> for_loop .)
    ELSE            reduce using rule 13 (instruction -> for_loop .)


state 13

    (14) instruction -> instruction_block .

    IF              reduce using rule 14 (instruction -> instruction_block .)
    PRINT           reduce using rule 14 (instruction -> instruction_block .)
    BREAK           reduce using rule 14 (instruction -> instruction_block .)
    CONTINUE        reduce using rule 14 (instruction -> instruction_block .)
    RETURN          reduce using rule 14 (instruction -> instruction_block .)
    WHILE           reduce using rule 14 (instruction -> instruction_block .)
    FOR             reduce using rule 14 (instruction -> instruction_block .)
    {               reduce using rule 14 (instruction -> instruction_block .)
    ID              reduce using rule 14 (instruction -> instruction_block .)
    $end            reduce using rule 14 (instruction -> instruction_block .)
    }               reduce using rule 14 (instruction -> instruction_block .)
    ELSE            reduce using rule 14 (instruction -> instruction_block .)


state 14

    (16) assignment -> assign_id . = expression ;
    (17) assignment -> assign_id . MUL_ASSIGN expression ;
    (18) assignment -> assign_id . DIV_ASSIGN expression ;
    (19) assignment -> assign_id . PLUS_ASSIGN expression ;
    (20) assignment -> assign_id . SUB_ASSIGN expression ;

    =               shift and go to state 25
    MUL_ASSIGN      shift and go to state 26
    DIV_ASSIGN      shift and go to state 27
    PLUS_ASSIGN     shift and go to state 28
    SUB_ASSIGN      shift and go to state 29


state 15

    (61) conditional_statement -> IF . ( expression ) instruction
    (62) conditional_statement -> IF . ( expression ) instruction ELSE instruction

    (               shift and go to state 30


state 16

    (67) print_statement -> PRINT . expression_list ;
    (68) expression_list -> . expression_list , expression
    (69) expression_list -> . expression
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . ID
    (30) expression -> . ( expression )
    (31) expression_binop -> . expression + expression
    (32) expression_binop -> . expression - expression
    (33) expression_binop -> . expression * expression
    (34) expression_binop -> . expression / expression
    (35) expression_binop -> . expression MATRIX_PLUS expression
    (36) expression_binop -> . expression MATRIX_SUB expression
    (37) expression_binop -> . expression MATRIX_MUL expression
    (38) expression_binop -> . expression MATRIX_DIV expression
    (39) expression_relop -> . expression RELOP_EQ expression
    (40) expression_relop -> . expression RELOP_GT expression
    (41) expression_relop -> . expression RELOP_LT expression
    (42) expression_relop -> . expression RELOP_GE expression
    (43) expression_relop -> . expression RELOP_LE expression
    (44) expression_relop -> . expression RELOP_NE expression
    (45) expression_unary -> . - expression
    (46) expression_unary -> . expression '
    (47) matrix_funcs -> . ZEROS ( expression_list )
    (48) matrix_funcs -> . ONES ( expression_list )
    (49) matrix_funcs -> . EYE ( expression_list )
    (50) constant -> . DT_STRING
    (51) constant -> . number
    (52) matrix -> . [ vectors ]
    (59) number -> . DT_INTEGER
    (60) number -> . DT_FLOAT

    ID              shift and go to state 39
    (               shift and go to state 40
    -               shift and go to state 41
    ZEROS           shift and go to state 42
    ONES            shift and go to state 43
    EYE             shift and go to state 44
    DT_STRING       shift and go to state 45
    [               shift and go to state 47
    DT_INTEGER      shift and go to state 48
    DT_FLOAT        shift and go to state 49

    expression_list                shift and go to state 31
    expression                     shift and go to state 32
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    number                         shift and go to state 46

state 17

    (63) jump_statement -> BREAK . ;

    ;               shift and go to state 50


state 18

    (64) jump_statement -> CONTINUE . ;

    ;               shift and go to state 51


state 19

    (65) return_statement -> RETURN . ;
    (66) return_statement -> RETURN . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . ID
    (30) expression -> . ( expression )
    (31) expression_binop -> . expression + expression
    (32) expression_binop -> . expression - expression
    (33) expression_binop -> . expression * expression
    (34) expression_binop -> . expression / expression
    (35) expression_binop -> . expression MATRIX_PLUS expression
    (36) expression_binop -> . expression MATRIX_SUB expression
    (37) expression_binop -> . expression MATRIX_MUL expression
    (38) expression_binop -> . expression MATRIX_DIV expression
    (39) expression_relop -> . expression RELOP_EQ expression
    (40) expression_relop -> . expression RELOP_GT expression
    (41) expression_relop -> . expression RELOP_LT expression
    (42) expression_relop -> . expression RELOP_GE expression
    (43) expression_relop -> . expression RELOP_LE expression
    (44) expression_relop -> . expression RELOP_NE expression
    (45) expression_unary -> . - expression
    (46) expression_unary -> . expression '
    (47) matrix_funcs -> . ZEROS ( expression_list )
    (48) matrix_funcs -> . ONES ( expression_list )
    (49) matrix_funcs -> . EYE ( expression_list )
    (50) constant -> . DT_STRING
    (51) constant -> . number
    (52) matrix -> . [ vectors ]
    (59) number -> . DT_INTEGER
    (60) number -> . DT_FLOAT

    ;               shift and go to state 52
    ID              shift and go to state 39
    (               shift and go to state 40
    -               shift and go to state 41
    ZEROS           shift and go to state 42
    ONES            shift and go to state 43
    EYE             shift and go to state 44
    DT_STRING       shift and go to state 45
    [               shift and go to state 47
    DT_INTEGER      shift and go to state 48
    DT_FLOAT        shift and go to state 49

    expression                     shift and go to state 53
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    number                         shift and go to state 46

state 20

    (70) while_loop -> WHILE . ( expression ) instruction

    (               shift and go to state 54


state 21

    (71) for_loop -> FOR . ID = range_value : range_value instruction

    ID              shift and go to state 55


state 22

    (21) assign_id -> ID .
    (22) assign_id -> ID . vector
    (55) vector -> . [ numbers ]
    (56) vector -> . [ ]

    =               reduce using rule 21 (assign_id -> ID .)
    MUL_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    DIV_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    PLUS_ASSIGN     reduce using rule 21 (assign_id -> ID .)
    SUB_ASSIGN      reduce using rule 21 (assign_id -> ID .)
    [               shift and go to state 57

    vector                         shift and go to state 56

state 23

    (15) instruction_block -> { . instructions }
    (5) instructions -> . instructions instruction
    (6) instructions -> . instruction
    (7) instruction -> . assignment
    (8) instruction -> . conditional_statement
    (9) instruction -> . print_statement
    (10) instruction -> . jump_statement
    (11) instruction -> . return_statement
    (12) instruction -> . while_loop
    (13) instruction -> . for_loop
    (14) instruction -> . instruction_block
    (16) assignment -> . assign_id = expression ;
    (17) assignment -> . assign_id MUL_ASSIGN expression ;
    (18) assignment -> . assign_id DIV_ASSIGN expression ;
    (19) assignment -> . assign_id PLUS_ASSIGN expression ;
    (20) assignment -> . assign_id SUB_ASSIGN expression ;
    (61) conditional_statement -> . IF ( expression ) instruction
    (62) conditional_statement -> . IF ( expression ) instruction ELSE instruction
    (67) print_statement -> . PRINT expression_list ;
    (63) jump_statement -> . BREAK ;
    (64) jump_statement -> . CONTINUE ;
    (65) return_statement -> . RETURN ;
    (66) return_statement -> . RETURN expression ;
    (70) while_loop -> . WHILE ( expression ) instruction
    (71) for_loop -> . FOR ID = range_value : range_value instruction
    (15) instruction_block -> . { instructions }
    (21) assign_id -> . ID
    (22) assign_id -> . ID vector

    IF              shift and go to state 15
    PRINT           shift and go to state 16
    BREAK           shift and go to state 17
    CONTINUE        shift and go to state 18
    RETURN          shift and go to state 19
    WHILE           shift and go to state 20
    FOR             shift and go to state 21
    {               shift and go to state 23
    ID              shift and go to state 22

    instructions                   shift and go to state 58
    instruction                    shift and go to state 5
    assignment                     shift and go to state 6
    conditional_statement          shift and go to state 7
    print_statement                shift and go to state 8
    jump_statement                 shift and go to state 9
    return_statement               shift and go to state 10
    while_loop                     shift and go to state 11
    for_loop                       shift and go to state 12
    instruction_block              shift and go to state 13
    assign_id                      shift and go to state 14

state 24

    (5) instructions -> instructions instruction .

    IF              reduce using rule 5 (instructions -> instructions instruction .)
    PRINT           reduce using rule 5 (instructions -> instructions instruction .)
    BREAK           reduce using rule 5 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instructions instruction .)
    RETURN          reduce using rule 5 (instructions -> instructions instruction .)
    WHILE           reduce using rule 5 (instructions -> instructions instruction .)
    FOR             reduce using rule 5 (instructions -> instructions instruction .)
    {               reduce using rule 5 (instructions -> instructions instruction .)
    ID              reduce using rule 5 (instructions -> instructions instruction .)
    $end            reduce using rule 5 (instructions -> instructions instruction .)
    }               reduce using rule 5 (instructions -> instructions instruction .)


state 25

    (16) assignment -> assign_id = . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . ID
    (30) expression -> . ( expression )
    (31) expression_binop -> . expression + expression
    (32) expression_binop -> . expression - expression
    (33) expression_binop -> . expression * expression
    (34) expression_binop -> . expression / expression
    (35) expression_binop -> . expression MATRIX_PLUS expression
    (36) expression_binop -> . expression MATRIX_SUB expression
    (37) expression_binop -> . expression MATRIX_MUL expression
    (38) expression_binop -> . expression MATRIX_DIV expression
    (39) expression_relop -> . expression RELOP_EQ expression
    (40) expression_relop -> . expression RELOP_GT expression
    (41) expression_relop -> . expression RELOP_LT expression
    (42) expression_relop -> . expression RELOP_GE expression
    (43) expression_relop -> . expression RELOP_LE expression
    (44) expression_relop -> . expression RELOP_NE expression
    (45) expression_unary -> . - expression
    (46) expression_unary -> . expression '
    (47) matrix_funcs -> . ZEROS ( expression_list )
    (48) matrix_funcs -> . ONES ( expression_list )
    (49) matrix_funcs -> . EYE ( expression_list )
    (50) constant -> . DT_STRING
    (51) constant -> . number
    (52) matrix -> . [ vectors ]
    (59) number -> . DT_INTEGER
    (60) number -> . DT_FLOAT

    ID              shift and go to state 39
    (               shift and go to state 40
    -               shift and go to state 41
    ZEROS           shift and go to state 42
    ONES            shift and go to state 43
    EYE             shift and go to state 44
    DT_STRING       shift and go to state 45
    [               shift and go to state 47
    DT_INTEGER      shift and go to state 48
    DT_FLOAT        shift and go to state 49

    expression                     shift and go to state 59
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    number                         shift and go to state 46

state 26

    (17) assignment -> assign_id MUL_ASSIGN . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . ID
    (30) expression -> . ( expression )
    (31) expression_binop -> . expression + expression
    (32) expression_binop -> . expression - expression
    (33) expression_binop -> . expression * expression
    (34) expression_binop -> . expression / expression
    (35) expression_binop -> . expression MATRIX_PLUS expression
    (36) expression_binop -> . expression MATRIX_SUB expression
    (37) expression_binop -> . expression MATRIX_MUL expression
    (38) expression_binop -> . expression MATRIX_DIV expression
    (39) expression_relop -> . expression RELOP_EQ expression
    (40) expression_relop -> . expression RELOP_GT expression
    (41) expression_relop -> . expression RELOP_LT expression
    (42) expression_relop -> . expression RELOP_GE expression
    (43) expression_relop -> . expression RELOP_LE expression
    (44) expression_relop -> . expression RELOP_NE expression
    (45) expression_unary -> . - expression
    (46) expression_unary -> . expression '
    (47) matrix_funcs -> . ZEROS ( expression_list )
    (48) matrix_funcs -> . ONES ( expression_list )
    (49) matrix_funcs -> . EYE ( expression_list )
    (50) constant -> . DT_STRING
    (51) constant -> . number
    (52) matrix -> . [ vectors ]
    (59) number -> . DT_INTEGER
    (60) number -> . DT_FLOAT

    ID              shift and go to state 39
    (               shift and go to state 40
    -               shift and go to state 41
    ZEROS           shift and go to state 42
    ONES            shift and go to state 43
    EYE             shift and go to state 44
    DT_STRING       shift and go to state 45
    [               shift and go to state 47
    DT_INTEGER      shift and go to state 48
    DT_FLOAT        shift and go to state 49

    expression                     shift and go to state 60
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    number                         shift and go to state 46

state 27

    (18) assignment -> assign_id DIV_ASSIGN . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . ID
    (30) expression -> . ( expression )
    (31) expression_binop -> . expression + expression
    (32) expression_binop -> . expression - expression
    (33) expression_binop -> . expression * expression
    (34) expression_binop -> . expression / expression
    (35) expression_binop -> . expression MATRIX_PLUS expression
    (36) expression_binop -> . expression MATRIX_SUB expression
    (37) expression_binop -> . expression MATRIX_MUL expression
    (38) expression_binop -> . expression MATRIX_DIV expression
    (39) expression_relop -> . expression RELOP_EQ expression
    (40) expression_relop -> . expression RELOP_GT expression
    (41) expression_relop -> . expression RELOP_LT expression
    (42) expression_relop -> . expression RELOP_GE expression
    (43) expression_relop -> . expression RELOP_LE expression
    (44) expression_relop -> . expression RELOP_NE expression
    (45) expression_unary -> . - expression
    (46) expression_unary -> . expression '
    (47) matrix_funcs -> . ZEROS ( expression_list )
    (48) matrix_funcs -> . ONES ( expression_list )
    (49) matrix_funcs -> . EYE ( expression_list )
    (50) constant -> . DT_STRING
    (51) constant -> . number
    (52) matrix -> . [ vectors ]
    (59) number -> . DT_INTEGER
    (60) number -> . DT_FLOAT

    ID              shift and go to state 39
    (               shift and go to state 40
    -               shift and go to state 41
    ZEROS           shift and go to state 42
    ONES            shift and go to state 43
    EYE             shift and go to state 44
    DT_STRING       shift and go to state 45
    [               shift and go to state 47
    DT_INTEGER      shift and go to state 48
    DT_FLOAT        shift and go to state 49

    expression                     shift and go to state 61
    expression_binop               shift and go to state 33
    expression_relop               shift and go to state 34
    expression_unary               shift and go to state 35
    matrix_funcs                   shift and go to state 36
    constant                       shift and go to state 37
    matrix                         shift and go to state 38
    number                         shift and go to state 46

state 28

    (19) assignment -> assign_id PLUS_ASSIGN . expression ;
    (23) expression -> . expression_binop
    (24) expression -> . expression_relop
    (25) expression -> . expression_unary
    (26) expression -> . matrix_funcs
    (27) expression -> . constant
    (28) expression -> . matrix
    (29) expression -> . ID
    (30) expression -> . ( expression )
    (31) expression_binop -> . expression + expression
    (32) expression_binop -> . expression - expression
    (33) expression_binop -> . expression * expression
    (34) expression_binop -> . expression / expression
    (35) expression_binop -> . expression MATRIX_PLUS expression
    (36) expression_binop -> . expression MATRIX_SUB expression
    (37) expression_binop -> . expression MATRIX_MUL expression
    (38) expression_binop -> . expression MATRIX_DIV expression
    (39) expression_relop -> . expression RELOP_EQ expression
    (40) expression_relop -> . expression RELOP_GT expression
    (41) expression_relop -> . expression RELOP_LT expression
    (42) expression_relop -> . expression RELOP_GE expression
    (43) expression_relop -> . expression RELOP_LE expression
    (44) expression_relop -> . expression RELOP_NE expression
    (45) expression_unary -> . - expression
    (46) expression_unary -> . expression '
    (47) matrix_funcs -> . ZEROS ( expression_list )
    (48) matrix_funcs -> . ONES ( expression_list )
    (49) matrix_funcs -> . EYE ( expression_list )
    (50) constant -> . DT_STRING
    (51) constant -> . number
    (52) matrix -> . [ vectors ]
    (59) number -> . DT_INTEGER
    (60) number -> . DT_FLOAT
